Bug 44234 - SIGSEGV src/gallium/state_trackers/glx/xlib/glx_api.c:2668
Summary: SIGSEGV src/gallium/state_trackers/glx/xlib/glx_api.c:2668
Status: CLOSED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium critical
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-28 10:59 UTC by Vinson Lee
Modified: 2011-12-30 11:57 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2011-12-28 10:59:21 UTC
mesa: 62e968d6dab2339a530ba1176b6a433d95db938a (master)

Run piglit test glx-create-context-valid-attribute-null on softpipe or llvmpipe.


$ ./bin/glx-create-context-valid-attribute-null
Segmentation fault (core dumped)


(gdb) bt
#0  0x011ba44f in glXCreateContextAttribsARB (dpy=0x9b8e1a0, config=0x9ba0590, shareCtx=0x0, direct=1, attrib_list=0x0)
    at src/gallium/state_trackers/glx/xlib/glx_api.c:2668
#1  0x08049ab9 in main (argc=1, argv=0xbfee4374)
    at piglit/tests/spec/glx_arb_create_context/valid-attribute-null.c:51
(gdb) frame 0
#0  0x011ba44f in glXCreateContextAttribsARB (dpy=0x9b8e1a0, config=0x9ba0590, shareCtx=0x0, direct=1, attrib_list=0x0)
    at src/gallium/state_trackers/glx/xlib/glx_api.c:2668
2668	   for (i = 0; !done && attrib_list[i]; i++) {
(gdb) print attrib_list
$1 = (const int *) 0x0
Comment 1 Brian Paul 2011-12-30 07:39:56 UTC
Fixed with commit 797960dbeca675d8966752bc7a201f311123f3d5
Comment 2 Vinson Lee 2011-12-30 11:57:08 UTC
mesa: 141d961d847111b2596f9c3094d5ebf1639c8c24 (master)

Verified fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.