st/glx/xlib: check for null attrib_list in glXCreateContextAttribsARB()

Fixes https://bugs.freedesktop.org/show_bug.cgi?id=44234